# universal

./: .clang-format  .clang-tidy  .codacy.yml  .coderabbit.yaml  .dockerignore  .gitignore  .release-please-manifest.json  BLOCK_FORMATS_ROADMAP.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE-OF-CONDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  ClangOverrides.txt  CommandLineTools.md  Dockerfile  Dockerfile.clang11  Dockerfile.clang12  Dockerfile.clang13  Dockerfile.clang14  Dockerfile.gcc10  Dockerfile.gcc11  Dockerfile.gcc12  Dockerfile.gcc9  Dockerfile.test  Dockerfile.testWithClang14  Dockerfile.testWithgcc10.3  DockerfileWithCompilerChecks  GEMINI.md  LICENSE  Makefile  PURPOSE.md  PositRefinementViz.md  README.md  UNIVERSALConfig.cmake  UNUMConfig.cmake  appveyor.yml  (+24 more)
.devcontainer/: Dockerfile  ubuntu.json  (+9 more)
c_api/pure_c/posit/: CMakeLists.txt  posit8.c  posit8_1.c
c_api/pure_c/test/posit/: CMakeLists.txt  playground.c  posit8.c
c_api/shim/posit/: CMakeLists.txt  posit_c_api.cpp
playground/: CMakeLists.txt  README.md  closure_of_8bit_systems.cpp  complex.cpp  concurrency.cpp  conversion.cpp  cordic_trace.cpp  efunc_posits.cpp  efunc_valids.cpp  evaluate_small_number_systems.cpp  expression_templates.cpp  float_to_decimal_string.cpp  generateClosurePlots.cpp  generate_a_closure_map.cpp  gismo_test.cpp  lazy_evaluation.cpp  lazy_evaluation_2.cpp  lazy_evaluation_experiments.txt  meta_programming.cpp  regression_test_skeleton.cpp  serialization.cpp  skeleton.cpp  type_test.cpp
tests/cfloat/: CMakeLists.txt
tests/cfloat/api/: api.cpp  assignment.cpp  attributes.cpp  constexpr.cpp  dynamic_range.cpp  exceptions.cpp  special_cases.cpp  subnormals.cpp  traits.cpp  types.cpp  ulp.cpp
tests/cfloat/arithmetic/: abit_size_check_for_correct_rounding.txt  addition.cpp  decrement.cpp  increment.cpp  multiplication.cpp  random_arithmetic.cpp  subtraction.cpp
tests/cfloat/arithmetic/nonsaturating/normal/: CMakeLists.txt  addition.cpp  division.cpp  multiplication.cpp  subtraction.cpp
tests/cfloat/arithmetic/nonsaturating/nosubsuper/: CMakeLists.txt  addition.cpp
tests/cfloat/arithmetic/nonsaturating/subnormal/: CMakeLists.txt  addition.cpp  division.cpp  multiplication.cpp  subtraction.cpp
tests/cfloat/arithmetic/nonsaturating/subsuper/: CMakeLists.txt  addition.cpp  division.cpp  multiplication.cpp  subtraction.cpp
tests/cfloat/arithmetic/nonsaturating/supernormal/: CMakeLists.txt  addition.cpp  division.cpp  multiplication.cpp  subtraction.cpp
tests/cfloat/arithmetic/saturating/normal/: addition.cpp
tests/cfloat/arithmetic/saturating/nosubsuper/: CMakeLists.txt  addition.cpp
tests/cfloat/arithmetic/saturating/subnormal/: addition.cpp
tests/cfloat/arithmetic/saturating/subsuper/: CMakeLists.txt  addition.cpp  multiplication.cpp  subtraction.cpp
tests/cfloat/arithmetic/saturating/supernormal/: addition.cpp
tests/cfloat/conversion/: assignment.cpp  blocktriple.cpp  double_conversion.cpp  double_subnormals.cpp  float_conversion.cpp  float_subnormals.cpp  from_blocktriple.cpp  ieee754_subnormals.cpp  normalization.cpp  to_blocktriple.cpp
tests/cfloat/conversion/nonsaturating/normal/: CMakeLists.txt  from_blocktriple.cpp  to_blocktriple.cpp
tests/cfloat/conversion/nonsaturating/nosubsuper/: CMakeLists.txt  from_blocktriple.cpp  to_blocktriple.cpp
tests/cfloat/conversion/nonsaturating/subnormal/: CMakeLists.txt  from_blocktriple.cpp  to_blocktriple.cpp
tests/cfloat/conversion/nonsaturating/subsuper/: CMakeLists.txt  from_blocktriple.cpp  to_blocktriple.cpp
tests/cfloat/logic/: logic.cpp
tests/cfloat/math/: classify.cpp  exponent.cpp  fractional.cpp  hyperbolic.cpp  hypotenuse.cpp  logarithm.cpp  next.cpp  pow.cpp  trigonometry.cpp  truncate.cpp
tests/cfloat/performance/: perf.cpp  performance.cpp
tests/cfloat/standard/: amd_fp24.cpp  bfloat16.cpp  pixar_fp24.cpp  pixar_pxr24.cpp  tensorfloat.cpp
tests/cmake_install/: CMakeLists.txt  run_install_test.cmake  run_missing_component_test.cmake
tests/cmake_install/consumer_missing_component/: CMakeLists.txt
tests/cmake_install/consumer_positive/: CMakeLists.txt  consumer.cpp
tools/bisection/: CMakeLists.txt  bisection.cpp
tools/closure/: CMakeLists.txt  README.md  closure_8bit_systems.cpp  closure_bfloat16.cpp  closure_cfloat8.cpp  closure_fixpnt8.cpp  closure_half_precision.cpp  closure_lns16.cpp  closure_lns8.cpp  closure_plot_generator.cpp  closure_plot_modes.cpp  closure_posit16.cpp  closure_posit16_compare.cpp  closure_posit16_validation.cpp  closure_posit8.cpp  closure_posits.cpp  test_adl_approach.cpp  test_closure.cpp  test_closure_bfloat16.cpp  test_posit_closure.cpp
tools/cmd/: CMakeLists.txt  areal.cpp  bfloat.cpp  cfloat8_2.cpp  cfloat8_3.cpp  cfloat8_4.cpp  common.hpp  compd.cpp  compf.cpp  compfp.cpp  compieee.cpp  compld.cpp  complns.cpp  compp.cpp  compsi.cpp  compui.cpp  convert.cpp  dc.cpp  double.cpp  doubledouble.cpp  fc.cpp  fixpnt.cpp  float.cpp  float2posit.cpp  half.cpp  ieee.cpp  ieee_fp.cpp  ldc.cpp  lns.cpp  longdouble.cpp  numeric_limits.cpp  pc.cpp  plimits.cpp  posit.cpp  posit_properties.cpp  propenv.cpp  propp.cpp  propq.cpp  quad.cpp  quaddouble.cpp  (+6 more)
tools/ucalc/: CMakeLists.txt  README.md  data_loader.hpp  expression.hpp  mcp_server.hpp  output_format.hpp  registry.hpp  regression.cpp  rewrite_patterns.hpp  steps_dbns.hpp  steps_dd.hpp  steps_dfloat.hpp  steps_fixpnt.hpp  steps_hfloat.hpp  steps_ieee.hpp  steps_lns.hpp  steps_posit.hpp  type_dispatch.hpp  ucalc.cpp
tools/ucalc/scripts/: 01_precision_comparison.ucalc  02_trig_accuracy_sweep.ucalc  03_numerical_constants.ucalc  04_catastrophic_cancellation.ucalc  05_fp8_deep_learning.ucalc  06_agent_type_selection.ucalc  07_agent_precision_audit.ucalc  08_agent_sweep_analysis.ucalc  09_agent_type_properties.ucalc  10_agent_golden_vectors.ucalc  11_agent_trace_analysis.ucalc  12_agent_quantize_comparison.ucalc
tools/utils/: CMakeLists.txt  execution_environment.cpp  language_feature_testing.cpp  lookup_arithmetic.cpp  ppm_to_png.cpp  reverse_view.cpp
unum2/: CMakeLists.txt
(+5310 files in other folders)
